--- a/.env
+++ b/.env
@@ -18,3 +18,10 @@
 APP_ENV=dev
 APP_SECRET=8191e0cf90a1492ad1ad0c06e362717e
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+DATABASE_URL="mysql://root:@127.0.0.1:3306/unjeupourtous?serverVersion=5.7"
+###< doctrine/doctrine-bundle ###
