--- a/.env
+++ b/.env
@@ -22,6 +22,7 @@ APP_SECRET=8191e0cf90a1492ad1ad0c06e362717e
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-#
-DATABASE_URL="mysql://root:@127.0.0.1:3306/unjeupourtous?serverVersion=5.7"
+# DATABASE_URL="mysql://root:@127.0.0.1:3306/unjeupourtous?serverVersion=5.7"
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
