--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.13",
         "easycorp/easyadmin-bundle": "^4.3",
+        "mailjet/mailjet-apiv3-php": "^1.5",
         "stripe/stripe-php": "^9.8",
         "symfony/asset": "6.1.*",
         "symfony/console": "6.1.*",
